# EnterpriseSimulator

./: README.md  pyproject.toml
Research/: GenCraft_Technical_Spec.docx  GenCraft_Technical_Spec.txt
openenv_pkg/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
openenv_pkg/data/agents/customer_002/life_context/: about_me.md
openenv_pkg/data/agents/customer_004/life_context/: current_issues.md  recent_purchases.md
openenv_pkg/data/agents/customer_005/life_context/: about_me.md  recent_purchases.md
openenv_pkg/data/agents/customer_006/life_context/: about_me.md  current_issues.md  recent_purchases.md
openenv_pkg/data/agents/customer_007/: persona.json
openenv_pkg/data/agents/customer_007/life_context/: current_issues.md
openenv_pkg/data/agents/customer_008/: persona.json
openenv_pkg/data/agents/customer_008/life_context/: about_me.md  current_issues.md
openenv_pkg/data/agents/customer_009/: persona.json
openenv_pkg/data/agents/customer_009/life_context/: about_me.md  recent_purchases.md
openenv_pkg/data/agents/customer_011/: persona.json
openenv_pkg/data/agents/customer_012/: persona.json
openenv_pkg/data/tasks/: task_002_pending_order.json  task_004_damaged_product.json  task_005_shipping_anxiety.json
openenv_pkg/outputs/: eval_trained.json  eval_vanilla.json
openenv_pkg/scripts/: collect_data.py  compare_evals.py  eval_model.py  plot_arch.py  plot_eval.py  reward_functions.py  setup_instance.sh  train_grpo.py
openenv_pkg/server/: __init__.py  app.py  customer_agent.py  environment.py  tools.py
(+52 files in other folders)
